--- a/2/src/index.html
+++ b/2/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Task</title>
-  <base href="/">
+  <title>PlayMarket</title>
+  <base href="/SmartexLab">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="root"></app-root>
 </body>
 </html>
